# airbyte

./: .env  docker-compose.yaml
airbyte-integrations/connectors/source-adjust/: acceptance-test-config.yml
airbyte-integrations/connectors/source-braze/: README.md  acceptance-test-config.yml  setup.py
airbyte-integrations/connectors/source-phiture-adjust/: .dockerignore  Dockerfile  README.md  acceptance-test-config.yml  build.gradle  main.py  setup.py
airbyte-integrations/connectors/source-phiture-app-store-connect/: Dockerfile  README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml  setup.py
airbyte-integrations/connectors/source-phiture-app-store-connect/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-phiture-app-store-connect/source_phiture_app_store_connect/: __init__.py  run.py  source.py  spec.yaml  streams.py
airbyte-integrations/connectors/source-phiture-app-store-connect/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
airbyte-integrations/connectors/source-phiture-branch/: .dockerignore  Dockerfile  README.md  main.py  setup.py
airbyte-integrations/connectors/source-phiture-branch-custom-api/: acceptance-test-config.yml  build.gradle  setup.py
airbyte-integrations/connectors/source-phiture-braze/: .dockerignore  Dockerfile  README.md  acceptance-test-config.yml  build.gradle  main.py  setup.py
airbyte-integrations/connectors/source-phiture-searchads/: .dockerignore  (+6 more)
airbyte-webapp/: package-lock.json  package.json
airbyte-webapp-e2e-tests/: package-lock.json
(+114 files in other folders)
